# SE-300-Firewall-Project-Fall-2024

./: CMakeLists.txt  README.md  main.c
LinuxWork/: LinuxKernelDriver
Log-and-ACL/: NetworkLog.csv
SDD/: 2.1 - Product Perspective  2.4 - Operating Environment  2.5 - Design and Implementation Constraints  2.6 - Assumptions and Dependencies  3.1 - User Interfaces  4.1 - Functional Requirements  5.1 - High Level Design  5.2 - Detailed Design
