cmake_minimum_required(VERSION 3.29)
project(untitled C)

set(CMAKE_C_STANDARD 23)

add_executable(untitled main.c)

//

//If in LINUX ENVIROMENT

//cmake_minimum_required(VERSION 3.30)
//project(untitled1 C)

//set(CMAKE_C_STANDARD 11)

//add_executable(untitled1 SE300WorkingCode.c)

//target_link_libraries(untitled1 pcap)


